@@ -1,3 +1,10 @@
+Wed Aug 13  Brian Cameron <Brian.Cameron@Sun.COM>
+
+	* acconfig.h, configure.in: add check for fbconsole (fallback
+	  (console)
+	* daemon/server.c: add call to start fbconsole (if present)
+          after the Xserver starts.
+
 Tue Aug 12 17:48:45 2003  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c: check operating system on startup
